<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">




    <ImageView
        android:id="@+id/howtouse"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/searchbar_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/how_to_use_page" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/how_to_use"
        android:fontFamily="@font/source_sans_pro"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/grey"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/type_your_required_kind_of_app_in_the_search_bar"
        android:textSize="18sp"
        android:fontFamily="@font/source_sans_pro"
        android:textColor="@color/grey"
        android:textAlignment="center" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:text="@string/for_example_pdf_scanner_toothpaste"
        android:textColor="@color/grey"
        android:fontFamily="@font/source_sans_pro"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="290dp"
        android:text="@string/in_result_you_will_get_all_the_apps_related_to_your_search"
        android:textColor="@color/grey"
        android:fontFamily="@font/source_sans_pro"
        android:textSize="18sp"
        android:textAlignment="center" />
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="395dp"
        android:text="@string/add"
        android:textColor="@color/grey"
        android:fontFamily="@font/source_sans_pro"
        android:textSize="18sp"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/line7"
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="63dp"
        android:background="@drawable/line7"
        android:contentDescription="@string/line7" />

</RelativeLayout>

