<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">



    <ImageView
        android:id="@+id/feedback"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/searchbar_box"
        android:contentDescription="@string/feedback_page" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/feedback"
        android:fontFamily="@font/source_sans_pro"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/grey"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <ImageView
        android:id="@+id/enterhere"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/feedback"
        android:background="@drawable/feed_box"
        android:contentDescription="@string/feed_box" />

    <EditText
        android:layout_width="match_parent"
        android:layout_marginHorizontal="60dp"
        android:id="@+id/mailbody"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:hint="@string/enter_here"
        android:layout_below="@+id/feedback"
        android:textAlignment="center"
        android:autofillHints=""
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/submitFeedback"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_below="@+id/enterhere"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/source_sans_pro_bold"
        android:text="SUBMIT" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/submitFeedback"
        android:text="@string/always_waiting_for_some_feedback_from_you_so_that_we_can_improve_with_each_update"
        android:textColor="@color/grey"
        android:fontFamily="@font/source_sans_pro"
        android:textSize="18sp"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/line7"
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/submitFeedback"
        android:layout_marginTop="150dp"
        android:background="@drawable/line7"
        android:contentDescription="@string/line7" />

</RelativeLayout>


