<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">



    <ImageView
        android:id="@+id/contactus"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/searchbar_box"
        android:contentDescription="@string/contact_us_page" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/contact_us"
        android:fontFamily="@font/source_sans_pro"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/grey"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="165dp" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:text="@string/for_any_queries"
        android:fontFamily="@font/source_sans_pro"
        android:textSize="18sp"
        android:textColor="@color/grey"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:text="@string/email_us_at_infobharatkart_gmail_com"
        android:textColor="@color/grey"
        android:fontFamily="@font/source_sans_pro"
        android:textSize="18sp"
        android:textAlignment="center" />

    <!--<TextView
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"
        android:text="@string/contact_us_at_8982835956"
        android:fontFamily="@font/source_sans_pro"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="378dp"
        android:text="@string/for_quick_responses_feel_free_mailing_us"
        android:textColor="@color/grey"
        android:fontFamily="@font/source_sans_pro"
        android:textSize="18sp"
        android:textAlignment="center" />-->

    <ImageView
        android:id="@+id/line7"
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="680dp"
        android:background="@drawable/line7"
        android:contentDescription="@string/line7" />

</RelativeLayout>


