<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor">

    <ImageView
        android:id="@+id/monument.header"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="70dp"
        android:layout_height="190dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/monument"
        android:contentDescription="@string/monumentimage" />

    <ImageView
        android:id="@+id/bgwhitebox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:background="@drawable/bgwhitebox"
        android:contentDescription="@string/bgwhitebox" />

    <TextView
        android:id="@+id/AccountRegister"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="195dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:text="@string/account_register"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/card1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:contentDescription="@string/namebox"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:id="@+id/entermobile"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="255dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="Enter Mobile Number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textAlignment="viewStart"
        android:textColor="@color/grey"
        android:textSize="18sp" />
    <ImageView
        android:id="@+id/otp2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/card1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/entermobile"
        android:contentDescription="@string/namebox"
        />

    <EditText
        android:id="@+id/enterotp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/entermobile"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/enter_otp"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textAlignment="viewStart"
        android:textColor="@color/grey"
        android:textSize="18sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_below="@+id/enterotp"
        android:layout_marginHorizontal="32dp"

        android:layout_marginTop="25dp"
        android:background="@drawable/round_button"
        android:contentDescription="@string/login"
        android:fontFamily="@font/source_sans_pro_bold"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="23sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_below="@id/login"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:clickable="true"
        android:text="Click To Resend OTP...."
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/login"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/source_sans_pro_bold"
        android:text=""
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="14sp"
        android:textStyle="bold" />


</RelativeLayout>
