<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgcolor"
    android:id="@+id/drawer"
    tools:openDrawer="start">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/monument.header"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="68dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:background="@drawable/monument"
        android:contentDescription="@string/monumentimage" />

    <ImageView
        android:id="@+id/halfbox"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:background="@drawable/half_white_box"
        android:layout_marginTop="340dp"
        android:contentDescription="@string/halfbox" />

    <ImageView
        android:id="@+id/search_bar"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/searchbar_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="311dp"
        android:contentDescription="@string/searchbar_box" />

        <EditText
            android:id="@+id/searchQuery"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/search_bar"
            android:layout_alignEnd="@+id/search_bar"
            android:layout_marginStart="14dp"
            android:layout_marginTop="313dp"
            android:layout_marginEnd="66dp"
            android:autofillHints=""
            android:hint="Search"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textColor="@color/grey"
            android:textSize="18sp"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/searchBuutton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/search_bar"
            android:layout_marginTop="320dp"
            android:layout_marginEnd="21dp"
            android:background="@drawable/searchbar_icon" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/made_in_india"
        android:fontFamily="@font/source_sans_pro_light"
        android:textSize="24sp"
        android:textColor="@color/grey"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="650dp" />
    </RelativeLayout>

   <!-- <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@id/navigationbar"
        ></com.google.android.material.navigation.NavigationView>
-->
</androidx.drawerlayout.widget.DrawerLayout>
